# novelbase-memory-mcp

./: .gitignore  Cargo.toml  README.md  convert-document-skill.md  import-document-skill.md
src/: main.rs
src/cli/: mod.rs
src/mcp/: mod.rs  protocol.rs  tools.rs
src/models/: edge.rs  mod.rs  node.rs
src/pipeline/: context.rs  mod.rs
src/pipeline/graph_buf/: mod.rs
src/pipeline/passes/: discover.rs  embed.rs  mod.rs  parse_chapter.rs
src/store/: edge.rs  file_hashes.rs  mod.rs  node.rs  schema.sql  vectors.rs
src/ui/: mod.rs
